--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,4 @@
-/* tailwind css */
+/* Tailwind CSS */
 /* ! tailwindcss v3.0.24 | MIT License | https://tailwindcss.com */
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
@@ -402,6 +402,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: auto;
   margin-right: auto;
 }
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
 .ml-1 {
   margin-left: 0.25rem;
 }
@@ -441,9 +445,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .block {
   display: block;
 }
-.inline-block {
-  display: inline-block;
-}
 .flex {
   display: flex;
 }
@@ -477,23 +478,20 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-auto {
   width: auto;
 }
-.w-1\/6 {
-  width: 16.666667%;
+.w-1\/5 {
+  width: 20%;
 }
-.w-2\/4 {
-  width: 50%;
+.w-2\/5 {
+  width: 40%;
 }
-.w-1\/4 {
-  width: 25%;
-}
-.w-1\/3 {
-  width: 33.333333%;
-}
-.max-w-7xl {
-  max-width: 80rem;
+.max-w-5xl {
+  max-width: 64rem;
 }
 .max-w-6xl {
   max-width: 72rem;
+}
+.max-w-7xl {
+  max-width: 80rem;
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -516,18 +514,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-2 {
   border-width: 2px;
 }
-.border-b-2 {
-  border-bottom-width: 2px;
-}
 .border-t {
   border-top-width: 1px;
 }
 .border-solid {
   border-style: solid;
-}
-.border-green {
-  --tw-border-opacity: 1;
-  border-color: rgb(14 143 0 / var(--tw-border-opacity));
 }
 .border-white {
   --tw-border-opacity: 1;
@@ -570,17 +561,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 .py-1\.5 {
   padding-top: 0.375rem;
@@ -672,16 +659,117 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+
+/* --------------------
+
+    共通パーツ
+
+-------------------- */
+/* セクション間margin */
+main section {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+/* 見出しと内容間margin */
+main section .content {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+/* dldtddリスト */
+.desc-list {
+    /* @apply mt-4; */
+}
+.desc-list .desc-title {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(14 143 0 / var(--tw-text-opacity));
+}
+
+.desc-list div {
+  margin-bottom: 1.5rem;
+  border-bottom-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(204 204 204 / var(--tw-border-opacity));
+}
+.desc-list dt {
+  display: inline-block;
+  width: 16.666667%;
+  text-align: right;
+  vertical-align: middle;
+  font-weight: 700;
+}
+.desc-list dd {
+  display: inline-block;
+  width: 75%;
+  vertical-align: middle;
+}
+
+/* 記事リンクリスト */
+.post-list li {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  display: block;
+}
+.post-list li a {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.post-list li a:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+/* --------------------
+
+    トップページ
+
+-------------------- */
+/* セクション毎コンテンツ */
+.toppage section {
+  display: flex;
+  justify-content: space-between;
+}
+.toppage section .title-area {
+  width: 20%;
+}
+.toppage section .content {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  width: 80%;
+}
+
+/* セクション見出し */
+.toppage .title-area .title {
+  display: inline-block;
+  border-bottom-width: 2px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(14 143 0 / var(--tw-border-opacity));
+}
+
+.toppage .title-area .title-jp {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
+
 @media (prefers-color-scheme: dark) {
   .dark\:text-white {
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
+
 @media (min-width: 640px) {
   .sm\:ml-0 {
     margin-left: 0px;
@@ -718,6 +806,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     text-align: right;
   }
 }
+
 @media (min-width: 768px) {
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -729,6 +818,7 @@ Ensure the default browser behavior of the `hidden` attribute.
     border-left-width: 1px;
   }
 }
+
 @media (min-width: 1024px) {
   .lg\:px-8 {
     padding-left: 2rem;
