--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,9 @@
+/* Tailwind CSS */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 /* user custom settings */
+/* 共通パーツ */
 h1,h2,h3,h4 {
     font-weight: bold;
     /* color: #0E8F00; */
@@ -21,3 +26,4 @@ h3 {
 h4 {
     font-size: 18px;
 }
+
