--- a/public/css/app.css
+++ b/public/css/app.css
@@ -515,14 +515,8 @@ Ensure the default browser behavior of the `hidden` attribute.
 .overflow-hidden {
   overflow: hidden;
 }
-.border-2 {
-  border-width: 2px;
-}
 .border-t {
   border-top-width: 1px;
-}
-.border-solid {
-  border-style: solid;
 }
 .border-white {
   --tw-border-opacity: 1;
@@ -568,14 +562,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-.py-1\.5 {
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-}
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -650,14 +636,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-.duration-300 {
-  transition-duration: 300ms;
-}
 
 /* --------------------
 
@@ -665,9 +643,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 -------------------- */
 /* 共通 */
+a {
+  cursor: pointer;
+}
 a:hover {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+
+input[type="submit"] {
+  cursor: pointer;
 }
 
 /* セクション間margin */
@@ -733,6 +718,19 @@ main section .content {
           text-decoration-line: underline;
 }
 
+/* submitボタン */
+.btn-submit {
+  border-width: 2px;
+  border-style: solid;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 200ms;
+}
+
 /* --------------------
 
     トップページ
@@ -769,6 +767,11 @@ main section .content {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(27 17 13 / var(--tw-text-opacity));
 }
 
 .hover\:text-brown:hover {
