フッターナビにジャンルも表示させた
ヘッダーはjsホバーで表示させる形式をとる予定。時間かかるので他pのスタイリングを優先

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,10 +29,12 @@ h4 {
 
 /* ヘッダー */
 header {
-    z-index: 99;
+    z-index: 10;
     box-shadow: 0 3px 4px #110704;
 }
-/* メイン */
-main {
-    z-index: 0;
+
+/* フッター */
+footer {
+    box-shadow: 0 -3px 4px #888888;
 }
+
