--- a/public/css/app.css
+++ b/public/css/app.css
@@ -482,6 +482,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-auto {
   width: auto;
 }
+.w-1\/6 {
+  width: 16.666667%;
+}
+.w-2\/4 {
+  width: 50%;
+}
+.w-1\/3 {
+  width: 33.333333%;
+}
 .w-1\/5 {
   width: 20%;
 }
@@ -708,14 +717,41 @@ main section .content {
   padding-left: 1rem;
   padding-right: 1rem;
   vertical-align: middle;
+  --tw-text-opacity: 1;
+  color: rgb(27 17 13 / var(--tw-text-opacity));
 }
 .post-list li a {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+  display: block;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border-radius: 0.5rem;
+  border-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(27 17 13 / var(--tw-border-opacity));
+  padding: 0.5rem;
 }
 .post-list li a:hover {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+
+.post-list li .img-area {
+  width: 40%;
+}
+.post-list li .text-area {
+  position: relative;
+  width: 60%;
+}
+.post-list li .text-area .post-time {
+  position: absolute;
+  right: -0.125rem;
+  bottom: -0.125rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 /* submitボタン */
