--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,10 +47,20 @@ main section .content {
 
 /* 記事リンクリスト */
 .post-list li {
-    @apply px-4 inline-block align-middle my-2;
+    @apply px-4 inline-block align-middle my-2 text-black;
 }
 .post-list li a {
-    @apply text-lg hover:underline;
+    @apply hover:no-underline p-2 my-3 flex justify-between block w-full border border-solid border-black rounded-lg;
+}
+
+.post-list li .img-area {
+    @apply w-1/3;
+}
+.post-list li .text-area {
+    @apply w-3/5 relative;
+}
+.post-list li .text-area .post-time {
+    @apply text-xs absolute -right-0.5 -bottom-0.5;
 }
 
 /* submitボタン */
