--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ h1,h2,h3,h4 {
     font-weight: bold;
     /* color: #0E8F00; */
 }
-h1,h2 {
+h1,h2,h3 {
     font-family: 'Yu Gothic Medium', 'YuGothicMedium', 'メイリオ', 'Meiryo', 'Arial';
     /* letter-spacing: 2px; */
 }
@@ -22,6 +22,7 @@ h2 {
 }
 h3 {
     font-size: 22px;
+    /* letter-spacing: 2px; */
 }
 h4 {
     font-size: 18px;
