--- a/public/css/app.css
+++ b/public/css/app.css
@@ -573,10 +573,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
 .pt-8 {
   padding-top: 2rem;
 }
@@ -845,6 +841,111 @@ main section .content {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 200ms;
 }
+
+/* --------------------
+
+    ヘッダー
+
+-------------------- */
+header {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+header .header-content {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+@media (min-width: 1296px) {
+    header .header-content {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+header .header-title {
+  width: 66.666667%;
+}
+
+@media (min-width: 1024px) {
+  header .header-title {
+    width: 16.666667%;
+  }
+}
+
+@media (min-width: 1280px) {
+  header .header-title {
+    width: 20%;
+  }
+}
+header .header-nav {
+  display: none;
+  width: 50%;
+}
+@media (min-width: 1024px) {
+  header .header-nav {
+    display: block;
+  }
+}
+@media (min-width: 1280px) {
+  header .header-nav {
+    width: 50%;
+  }
+}
+header .search-box {
+  display: none;
+  width: 33.333333%;
+}
+@media (min-width: 1024px) {
+  header .search-box {
+    display: block;
+  }
+}
+@media (min-width: 1280px) {
+  header .search-box {
+    width: 25%;
+  }
+}
+
+/* ハンバーガーメニュー */
+header #hamburger {
+  display: block;
+}
+@media (min-width: 1024px) {
+  header #hamburger {
+    display: none;
+  }
+}
+header #hamburger .bar {
+  margin-top: 0.625rem;
+  margin-bottom: 0.625rem;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  height: 0.125rem;
+  width: 2rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  transition-duration: 300ms;
+}
+header #hamburger.on .bar {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+header #hamburger.on .bar:first-child {
+  --tw-translate-y: 50%;
+  --tw-rotate: -45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+header #hamburger.on .bar:last-child {
+  --tw-translate-y: -50%;
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+header #hamburger.on .bar:nth-child(even) {
+  opacity: 0;
+}
+
 
 /* --------------------
 
