--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .top-50p {
+        top: 50%;
+    }
+    .bottom-50p {
+        bottom: 50%;
+    }
+}
+
 /* --------------------
 
     共通パーツ
@@ -115,6 +124,57 @@ main section .content {
 .btn-submit {
     @apply px-3 py-1.5 border-2 border-solid transition-all duration-200;
 }
+
+/* --------------------
+
+    ヘッダー
+
+-------------------- */
+header {
+    @apply py-3;
+}
+
+header .header-content {
+    @apply mx-2;
+}
+@media (min-width: 1296px) {
+    header .header-content {
+        @apply mx-auto;
+    }
+}
+
+header .header-title {
+    @apply
+        w-2/3
+        lg:w-1/6
+        xl:w-1/5;
+}
+header .header-nav {
+    @apply
+        hidden
+        lg:block w-1/2
+        xl:w-1/2;
+}
+header .search-box {
+    @apply
+        hidden
+        lg:block w-1/3
+        xl:w-1/4;
+}
+
+/* ハンバーガーメニュー */
+header #hamburger {
+    @apply
+        block
+        lg:hidden;
+}
+header #hamburger .bar {
+    @apply block bg-white w-8 h-0.5 duration-300 my-2.5 mx-auto;
+}
+header #hamburger.on .bar {
+    @apply my-0 first:-rotate-45 first:translate-y-1/2 last:rotate-45 last:-translate-y-1/2 even:opacity-0;
+}
+
 
 /* --------------------
 
