--- a/public/css/app.css
+++ b/public/css/app.css
@@ -505,6 +505,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.flex-wrap {
+  flex-wrap: wrap;
+}
 .items-center {
   align-items: center;
 }
@@ -1014,6 +1017,51 @@ header #hamburger .content .link-list li {
   margin-bottom: 0.5rem;
   display: block;
   width: 50%;
+}
+
+/* --------------------
+
+    フッター
+
+-------------------- */
+footer .footer-content > * {
+  width: 100%;
+}
+footer .footer-content .footer-title {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  footer .footer-content .footer-title {
+    width: 16.666667%;
+  }
+  footer .footer-content .footer-nav {
+    width: 50%;
+  }
+  footer .footer-content .search-box {
+    width: 33.333333%;
+  }
+}
+
+footer .footer-content .footer-nav > ul {
+  flex-wrap: wrap;
+}
+footer .footer-content .footer-nav #gnav-cats {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  footer .footer-content .footer-nav #gnav-cats {
+    width: 25%;
+  }
+}
+footer .footer-content .footer-nav #gnav-gens {
+  display: none;
+}
+@media (min-width: 1024px) {
+  footer .footer-content .footer-nav #gnav-gens {
+    display: block;
+  }
 }
 
 /* --------------------
