--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1027,20 +1027,40 @@ header #hamburger .content .link-list li {
 footer .footer-content > * {
   width: 100%;
 }
+@media (min-width: 768px) {
+  footer .footer-content > * {
+    width: 50%;
+  }
+}
+@media (min-width: 1024px) {
+  footer .footer-content > * {
+    width: 33.333333%;
+  }
+}
 footer .footer-content .footer-title {
   margin-top: 1rem;
   margin-bottom: 1rem;
   text-align: center;
 }
-@media (min-width: 768px) {
+@media (min-width: 1280px) {
   footer .footer-content .footer-title {
     width: 16.666667%;
   }
   footer .footer-content .footer-nav {
-    width: 50%;
+    width: 58.333333%;
   }
+}
+footer .footer-content .search-box {
+  display: none;
+}
+@media (min-width: 1024px) {
   footer .footer-content .search-box {
-    width: 33.333333%;
+    display: block;
+  }
+}
+@media (min-width: 1280px) {
+  footer .footer-content .search-box {
+    width: 25%;
   }
 }
 
@@ -1052,13 +1072,18 @@ footer .footer-content .footer-nav #gnav-cats {
 }
 @media (min-width: 768px) {
   footer .footer-content .footer-nav #gnav-cats {
+    width: 50%;
+  }
+}
+@media (min-width: 1280px) {
+  footer .footer-content .footer-nav #gnav-cats {
     width: 25%;
   }
 }
 footer .footer-content .footer-nav #gnav-gens {
   display: none;
 }
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
   footer .footer-content .footer-nav #gnav-gens {
     display: block;
   }
