--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -202,16 +202,24 @@ header #hamburger .content .link-list li {
 
 -------------------- */
 footer .footer-content > * {
-    @apply w-full;
+    @apply
+        w-full
+        md:w-1/2
+        lg:w-1/3;
 }
 footer .footer-content .footer-title {
-    @apply md:w-1/6 text-center my-4;
+    @apply
+        text-center my-4
+        xl:w-1/6;
 }
 footer .footer-content .footer-nav {
-    @apply md:w-1/2;
+    @apply xl:w-7/12;
 }
 footer .footer-content .search-box {
-    @apply md:w-1/3;
+    @apply
+        hidden
+        lg:block
+        xl:w-1/4;
 }
 
 footer .footer-content .footer-nav > ul {
@@ -220,12 +228,13 @@ footer .footer-content .footer-nav > ul {
 footer .footer-content .footer-nav #gnav-cats {
     @apply
         w-full
-        md:w-1/4;
+        md:w-2/4
+        xl:w-1/4;
 }
 footer .footer-content .footer-nav #gnav-gens {
     @apply
         hidden
-        lg:block;
+        xl:block;
 }
 
 /* --------------------
