--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -133,13 +133,6 @@ main section .content {
     ヘッダー
 
 -------------------- */
-header {
-    @apply py-3 sticky top-0;
-}
-
-header .header-content {
-    @apply mx-2;
-}
 @media (min-width: 1296px) {
     header .header-content {
         @apply mx-auto;
@@ -155,12 +148,13 @@ header .header-title {
 header .header-nav {
     @apply
         hidden
-        lg:block w-1/2
+        lg:block
         xl:w-1/2;
 }
+
 header .search-box {
     @apply
-        hidden
+        hidden w-2/5
         lg:block w-1/3
         xl:w-1/4;
 }
@@ -179,14 +173,10 @@ header #hamburger.on .bar {
 }
 
 header #hamburger .content {
-    @apply bg-white-dark text-black z-50 fixed opacity-0 w-80 px-2 py-2 duration-300 -right-full overflow-visible top-90p;
+    @apply  opacity-0 w-80 -right-full;
 }
 header #hamburger.on .content {
     @apply block opacity-100 right-0;
-}
-
-header #hamburger .content nav {
-    @apply last:border-0 border-b border-solid py-4;
 }
 
 header #hamburger .content .link-list {
