--- a/public/css/app.css
+++ b/public/css/app.css
@@ -389,11 +389,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .relative {
   position: relative;
 }
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+}
 .top-0 {
   top: 0px;
 }
 .right-0 {
   right: 0px;
+}
+.z-50 {
+  z-index: 50;
 }
 .m-0 {
   margin: 0px;
@@ -401,6 +408,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 .ml-1 {
   margin-left: 0.25rem;
@@ -501,14 +516,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-center {
   justify-content: center;
 }
+.justify-between {
+  justify-content: space-between;
+}
 .justify-around {
   justify-content: space-around;
 }
 .overflow-hidden {
   overflow: hidden;
 }
+.overflow-visible {
+  overflow: visible;
+}
 .border-t {
   border-top-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
+}
+.border-solid {
+  border-style: solid;
 }
 .border-brown {
   --tw-border-opacity: 1;
@@ -518,6 +545,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(27 17 13 / var(--tw-border-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -525,6 +556,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-black-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+.bg-brown {
+  --tw-bg-opacity: 1;
+  background-color: rgb(50 22 11 / var(--tw-bg-opacity));
+}
+.bg-white-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
 }
 .p-6 {
   padding: 1.5rem;
@@ -558,6 +597,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -640,6 +687,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
+.duration-300 {
+  transition-duration: 300ms;
+}
+.top-90p {
+        top: 90px;
+    }
 
 /* --------------------
 
@@ -841,28 +894,6 @@ main section .content {
     ヘッダー
 
 -------------------- */
-header {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0px;
-  box-sizing: border-box;
-  height: 100%;
-  --tw-bg-opacity: 1;
-  background-color: rgb(50 22 11 / var(--tw-bg-opacity));
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-header .header-content {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  display: flex;
-  max-width: 80rem;
-  align-items: center;
-  justify-content: space-between;
-}
 @media (min-width: 1296px) {
     header .header-content {
     margin-left: auto;
@@ -872,7 +903,6 @@ header .header-content {
 
 header .header-title {
   width: 66.666667%;
-  font-family: Ostrich Sans, Yu Gothic Medium, YuGothicMedium, メイリオ, Meiryo, Arial;
 }
 
 @media (min-width: 1024px) {
@@ -886,66 +916,23 @@ header .header-title {
     width: 20%;
   }
 }
-header .header-title a:hover {
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
-}
-header .header-title .blog-name {
-  font-size: 3rem;
-  line-height: 1;
-}
-header .header-title .blog-desc {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 header .header-nav {
-  margin-left: auto;
-  margin-right: auto;
   display: none;
-  text-align: center;
 }
-
 @media (min-width: 1024px) {
   header .header-nav {
     display: block;
   }
 }
-
 @media (min-width: 1280px) {
   header .header-nav {
     width: 50%;
   }
 }
-header .header-nav > ul {
-  display: flex;
-  justify-content: space-around;
-}
-header .header-nav #gnav-cats {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-header .header-nav #gnav-cats > a {
-  display: block;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-header .header-nav #gnav-cats > a:hover {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-header .header-nav #gnav-gens {
-  display: none;
-}
 
 header .search-box {
   display: none;
   width: 33.333333%;
-  text-align: right;
 }
 
 @media (min-width: 1024px) {
@@ -959,29 +946,9 @@ header .search-box {
     width: 25%;
   }
 }
-header .search-box input[type="search"] {
-  padding: 0.5rem;
-  text-align: left;
-  --tw-text-opacity: 1;
-  color: rgb(27 17 13 / var(--tw-text-opacity));
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-header .search-box input[type="submit"] {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-}
-header .search-box input[type="submit"]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(50 22 11 / var(--tw-text-opacity));
-}
 
 /* ハンバーガーメニュー */
 header #hamburger {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
   display: block;
 }
 @media (min-width: 1024px) {
@@ -1020,38 +987,14 @@ header #hamburger.on .bar:nth-child(even) {
 }
 
 header #hamburger .content {
-  position: fixed;
   right: -100%;
-  z-index: 50;
   width: 20rem;
-  overflow: visible;
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  --tw-text-opacity: 1;
-  color: rgb(27 17 13 / var(--tw-text-opacity));
   opacity: 0;
-  transition-duration: 300ms;
-        top: 90px;
 }
 header #hamburger.on .content {
   right: 0px;
   display: block;
   opacity: 1;
-}
-
-header #hamburger .content nav {
-  border-bottom-width: 1px;
-  border-style: solid;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-header #hamburger .content nav:last-child {
-  border-width: 0px;
 }
 
 header #hamburger .content .link-list {
@@ -1069,35 +1012,6 @@ header #hamburger .content .link-list li {
   margin-bottom: 0.5rem;
   display: block;
   width: 50%;
-}
-
-header #hamburger .hbg-search-box input[type="search"] {
-  padding: 0.5rem;
-  text-align: left;
-  --tw-text-opacity: 1;
-  color: rgb(27 17 13 / var(--tw-text-opacity));
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-header #hamburger .hbg-search-box input[type="submit"] {
-  margin-top: 1rem;
-  --tw-border-opacity: 1;
-  border-color: rgb(27 17 13 / var(--tw-border-opacity));
-  border-width: 2px;
-  border-style: solid;
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 200ms;
-}
-header #hamburger .hbg-search-box input[type="submit"]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(27 17 13 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 /* --------------------
@@ -1286,6 +1200,10 @@ footer .footer-content .footer-nav #gnav-gens {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 17 13 / var(--tw-bg-opacity));
+}
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1293,6 +1211,10 @@ footer .footer-content .footer-nav #gnav-gens {
 .hover\:text-black:hover {
   --tw-text-opacity: 1;
   color: rgb(27 17 13 / var(--tw-text-opacity));
+}
+.hover\:text-brown:hover {
+  --tw-text-opacity: 1;
+  color: rgb(50 22 11 / var(--tw-text-opacity));
 }
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline;
