--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,7 +38,7 @@ input[type="submit"] {
 }
 
 main {
-    @apply bg-white max-w-5xl mx-auto my-6 leading-loose;
+    @apply bg-white max-w-5xl mx-auto my-6 px-2 leading-loose;
 }
 
 /* セクション間margin */
@@ -52,46 +52,59 @@ main section .content {
 }
 
 /* dldtddリスト */
-.desc-list {
-    /* @apply mt-4; */
-}
 .desc-list .desc-title {
     @apply my-4 text-lg text-green;
 }
 
 .desc-list div {
-    @apply mb-6 border-b border-gray border-solid;
+    @apply mb-6 border-b border-gray border-solid flex justify-between flex-wrap;
 }
 .desc-list dt {
-    @apply inline-block align-middle text-right font-bold w-1/6;
+    @apply
+        w-full font-bold
+        md:w-1/6 md:text-right;
 }
 .desc-list dd {
-    @apply inline-block align-middle w-3/4;
+    @apply
+        w-full
+        md:w-5/6 md:pl-4;
 }
 
 /* 記事リンクリスト */
 .post-list li {
-    @apply px-4 inline-block align-middle my-2 text-black;
+    @apply
+        max-w-md px-4 my-2 mx-auto block text-black
+        sm:max-w-none;
 }
 .post-list li > a,
 .post-list .no-link {
-    @apply hover:no-underline p-2 my-2 flex justify-between block w-full border border-solid border-black rounded-lg;
+    @apply
+        hover:no-underline py-2 my-2 flex justify-between flex-wrap block w-full border-b border-solid border-gray
+        sm:max-w-none sm:p-2 sm:border sm:border-black sm:rounded-lg;
 }
 
 .post-list li .img-area {
-    @apply w-4/12;
+    @apply
+        w-full
+        sm:w-1/3;
 }
 .post-list li .text-area {
-    @apply w-7/12 text-sm relative whitespace-normal;
+    @apply
+        w-full text-sm relative whitespace-normal
+        sm:w-2/3 sm:pl-2;
+}
+.post-list li .text-area > h3 {
+    @apply
+        my-2 text-green
+        sm:my-0;
 }
 .post-list li .text-area > p {
     @apply mt-2;
 }
-.post-list li .text-area > h3 {
-    @apply text-green;
-}
 .post-list li .text-area .post-time {
-    @apply text-xs absolute -right-0.5 -bottom-0.5;
+    @apply
+        text-xs
+        sm:absolute sm:-right-0.5 sm:-bottom-0.5;
 }
 
 /* シンプルリンクリスト */
@@ -234,13 +247,18 @@ footer .footer-content .footer-nav #gnav-gens {
 -------------------- */
 /* セクション毎コンテンツ */
 .toppage section {
-    @apply flex justify-between;
+    @apply flex justify-between flex-wrap;
+}
+.toppage section > * {
+    @apply w-full;
 }
 .toppage section .title-area {
-    @apply w-1/5;
+    @apply lg:w-1/5;
 }
 .toppage section .content {
-    @apply w-4/5 mt-8 mb-4;
+    @apply
+        mt-8 mb-4
+        lg:w-4/5;
 }
 
 /* セクション見出し */
