--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -79,7 +79,7 @@ main section .content {
 .post-list li > a,
 .post-list .no-link {
     @apply
-        hover:no-underline py-2 my-2 flex justify-between flex-wrap block w-full border-b border-solid border-gray
+        hover:no-underline py-2 my-2 flex justify-between flex-wrap w-full border-b border-solid border-gray
         sm:max-w-none sm:p-2 sm:border sm:border-black sm:rounded-lg;
 }
 
@@ -168,7 +168,7 @@ header .header-nav {
 header .search-box {
     @apply
         hidden w-2/5
-        lg:block w-1/3
+        lg:block lg:w-1/3
         xl:w-1/4;
 }
 
